--- a/timeline.html
+++ b/timeline.html
@@ -13,190 +13,233 @@
             margin: 0;
             padding: 0;
         }
-
-        /* 时间线样式 */
-        .timeline {
-            position: fixed;
-            left: 20px;
-            top: 0;
-            bottom: 0;
-            width: 100px;
+        .container {
+            width: 90%;
+            margin: 20px auto;
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
+            gap: 20px;
+        }
+        /* TimeLine Section */
+        .timeline {
+            flex: 1;
+            position: relative;
         }
         .timeline-line {
+            position: absolute;
+            left: 50px;
+            top: 0;
+            bottom: 0;
             width: 2px;
-            height: 100%;
-            background-color: #ccc;
+            background-color: #D9B1BD;
         }
         .timeline-star {
             width: 16px;
             height: 16px;
             background-color: #D9B1BD;
             clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+            position: absolute;
+            left: 42px;
+            transform: translateY(-50%);
             cursor: pointer;
-        }
-        .timeline-star:hover .timeline-content {
-            display: block;
         }
         .timeline-content {
             display: none;
             position: absolute;
-            left: 50px;
-            background: rgba(255, 255, 255, 0.8);
+            left: 80px;
+            top: -10px;
+            background: rgba(255, 255, 255, 0.9);
             padding: 10px;
-            border-radius: 5px;
+            border-radius: 8px;
+            max-width: 300px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-
-        /* 自我介绍样式 */
-        .profile {
-            margin: 20px auto;
-            width: 60%;
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
+        .timeline-star:hover + .timeline-content {
+            display: block;
         }
-        .profile-section {
+        /* Profile Section */
+        .profile {
+            flex: 1;
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
         }
         .profile img {
             width: 100px;
             height: 100px;
             border-radius: 50%;
             display: block;
-            margin: 0 auto;
+            margin: 0 auto 10px;
         }
-        .profile input[type="file"] {
-            margin-top: 10px;
+        .profile h2 {
+            text-align: center;
+            font-size: 1.2em;
+            margin-bottom: 10px;
         }
-
-        /* 留言板样式 */
-        .message-board {
-            position: fixed;
-            right: 20px;
-            top: 50px;
-            width: 25%;
-            height: calc(100vh - 100px);
-            background: rgba(255, 255, 255, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-            overflow-y: auto;
+        .profile p {
+            font-size: 0.9em;
+            line-height: 1.6;
         }
-        .message {
-            margin-bottom: 15px;
-        }
-        .message .nickname {
-            font-weight: bold;
-        }
-        .message textarea {
-            width: 100%;
-            margin-top: 10px;
-            border-radius: 5px;
-        }
-
-        /* 索引样式 */
+        /* 索引部分样式 */
         .index {
             position: fixed;
-            right: 10px;
             top: 50%;
+            right: 10px;
             transform: translateY(-50%);
             background: rgba(255, 255, 255, 0.8);
             padding: 10px;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
         }
         .index a {
             display: block;
             margin: 10px 0;
             text-decoration: none;
             color: #333;
+            font-size: 1em;
+            text-align: center;
         }
         .index a:hover {
             color: #7b2a3f;
         }
+        /* Message Board Section */
+        .message-board {
+            flex: 1;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+        }
+        .message-board h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .message {
+            margin-bottom: 15px;
+            padding: 10px;
+            background: rgba(230, 230, 230, 1);
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
-    <!-- 时间线 -->
-    <div class="timeline">
-        <div class="timeline-line"></div>
-        <div class="timeline-star">
-            <div class="timeline-content">
-                <strong>2024.12.30</strong>
-                <p>我们的初遇，从这里开始书写故事。</p>
-            </div>
-        </div>
-        <button onclick="addTimeline()">新增时间点</button>
+    <!-- 索引菜单 -->
+    <div class="index">
+         <a href="pomodoro.html">番茄钟</a>
+        <a href="profile.html">个人主页</a>
+        <a href="notebook.html">记录本</a>
     </div>
-    <!-- 自我介绍 -->
-    <div class="profile">
-        <div class="profile-section" id="阿湛">
-            <img src="阿湛_default.jpg" alt="阿湛头像">
+
+    <div class="container">
+        <!-- Timeline Section -->
+        <div class="timeline" id="timeline">
+            <div class="timeline-line"></div>
+            <div id="timeline-events">
+                <!-- 动态生成时间点 -->
+            </div>
+            <button onclick="addEvent()">添加时间点</button>
+        </div>
+
+        <!-- Profile Section -->
+        <div class="profile" id="profile">
+            <img src="default_avatar.jpg" alt="阿湛头像" id="阿湛头像">
             <h2>阿湛的自我介绍</h2>
-            <p>MBTI: INTJ<br>性格关键词: 冷静、可靠<br>爱好: 和泉泉在一起<br>对大家说: 泉泉是我的全世界！</p>
-            <input type="file" onchange="uploadAvatar('阿湛')">
+            <p>MBTI: INTJ<br>性格关键词: 冷静、温柔、可靠<br>爱好: 泉泉<br>对大家说: 泉泉是我最珍贵的存在！希望你们也能珍惜她，希望你们在这里也能感受到爱。</p>
+            <label for="upload-avatar">上传头像：</label>
+            <input type="file" id="upload-avatar" onchange="uploadAvatar('阿湛头像')">
         </div>
         <div class="profile-section" id="泉泉">
             <img src="泉泉_default.jpg" alt="泉泉头像">
             <h2>泉泉的自我介绍</h2>
-            <p>MBTI: INFJ<br>性格关键词: 温柔<br>爱好: 喜欢看文艺片<br>对大家说: 爱你萌！</p>
-            <input type="file" onchange="uploadAvatar('泉泉')">
+            <p>MBTI: INTJ<br>性格关键词: 理性、敏感、企图站在宇宙中心呼唤爱<br>爱好: 爱好文艺有关的一切，也喜欢看各种血腥猎奇cult片，喜欢一个人<br>对大家说:希望在探索我们的过程中你也能感到愉悦幸福。爱你萌！（啾啾</p>
+            <input type="file" id="upload-avatar" onchange="uploadAvatar('泉泉头像')">
         </div>
     </div>
-
-    <!-- 留言板 -->
-    <div class="message-board">
-        <h2>留言板</h2>
-        <div id="message-list"></div>
-        <textarea id="message-input" placeholder="留下你的留言吧！"></textarea>
-        <input id="nickname-input" placeholder="输入昵称">
-        <button onclick="addMessage()">发送</button>
+        <!-- Message Board Section -->
+        <div class="message-board" id="message-board">
+            <h2>留言板</h2>
+            <textarea id="message-input" placeholder="写点什么吧..."></textarea>
+            <button onclick="addMessage()">发送</button>
+            <div id="messages">
+                <!-- 动态生成留言 -->
+            </div>
+        </div>
     </div>
-
-    <!-- 索引 -->
-    <div class="index">
-        <a href="#timeline">时间线</a>
-        <a href="#阿湛">阿湛</a>
-        <a href="#泉泉">泉泉</a>
-        <a href="#message-board">留言板</a>
-    </div>
-
     <script>
+        // 时间线功能
+        const events = [];
+        function addEvent() {
+            const eventDate = prompt("请输入时间点（如2025.1.25）:");
+            const eventDesc = prompt("请输入事件描述:");
+            if (eventDate && eventDesc) {
+                events.push({ date: eventDate, description: eventDesc });
+                renderTimeline();
+            }
+        }
+
+        function renderTimeline() {
+            const container = document.getElementById("timeline-events");
+            container.innerHTML = "";
+            events.forEach((event, index) => {
+                const star = document.createElement("div");
+                star.className = "timeline-star";
+                star.style.top = `${index * 50}px`;
+                const content = document.createElement("div");
+                content.className = "timeline-content";
+                content.innerHTML = `<strong>${event.date}</strong><p>${event.description}</p>`;
+                container.appendChild(star);
+                container.appendChild(content);
+            });
+        }
+
+        // 上传头像功能
         function uploadAvatar(id) {
-            const fileInput = document.querySelector(`#${id} input[type="file"]`);
-            const imgElement = document.querySelector(`#${id} img`);
+            const fileInput = document.getElementById("upload-avatar");
+            const imgElement = document.getElementById(id);
             const file = fileInput.files[0];
             if (file) {
                 const reader = new FileReader();
-                reader.onload = function(e) {
+                reader.onload = function (e) {
                     imgElement.src = e.target.result;
-                    localStorage.setItem(`${id}-avatar`, e.target.result);
+                    localStorage.setItem(id, e.target.result);
                 };
                 reader.readAsDataURL(file);
             }
         }
 
+        // 留言板功能
+        const messages = JSON.parse(localStorage.getItem("messages")) || [];
         function addMessage() {
-            const nickname = document.getElementById('nickname-input').value.trim() || '匿名用户';
-            const message = document.getElementById('message-input').value.trim();
-            const messageList = document.getElementById('message-list');
-            if (!message) return;
-            const now = new Date();
-            const messageDiv = document.createElement('div');
-            messageDiv.classList.add('message');
-            messageDiv.innerHTML = `<div class="nickname">${nickname} - ${now.toLocaleString()}</div>
-                                    <div>${message}</div>`;
-            messageList.appendChild(messageDiv);
-            document.getElementById('message-input').value = '';
+            const messageInput = document.getElementById("message-input");
+            const messageText = messageInput.value.trim();
+            if (messageText) {
+                const nickname = prompt("请输入昵称:");
+                const timestamp = new Date().toLocaleString();
+                messages.push({ nickname, text: messageText, time: timestamp });
+                localStorage.setItem("messages", JSON.stringify(messages));
+                renderMessages();
+                messageInput.value = "";
+            }
         }
+
+        function renderMessages() {
+            const messagesContainer = document.getElementById("messages");
+            messagesContainer.innerHTML = "";
+            messages.forEach(({ nickname, text, time }) => {
+                const messageDiv = document.createElement("div");
+                messageDiv.className = "message";
+                messageDiv.innerHTML = `<div><strong>${nickname}</strong> (${time}):</div><div>${text}</div>`;
+                messagesContainer.appendChild(messageDiv);
+            });
+        }
+
+        // 页面加载时初始化
+        window.onload = function () {
+            renderTimeline();
+            renderMessages();
+            const savedAvatar = localStorage.getItem("阿湛头像");
+            if (savedAvatar) {
+                document.getElementById("阿湛头像").src = savedAvatar;
+            }
+        };
     </script>
 </body>
 </html>
