--- a/timeline.html
+++ b/timeline.html
@@ -129,14 +129,14 @@
         <div class="profile">
             <img src="阿湛头像.jpg" alt="阿湛头像" id="阿湛头像">
             <h2>阿湛的自我介绍</h2>
-            <p>MBTI: INTJ<br>性格关键词: 冷静、温柔、可靠<br>爱好: 泉泉<br>对大家说: 泉泉是我最珍贵的存在！</p>
+            <p>MBTI: INTJ<br>性格关键词: 冷静、温柔、可靠<br>爱好: 泉泉<br>对大家说: 泉泉是我最珍贵的存在！希望你们也能珍惜她，希望你们在这里也能感受到爱。</p>
             <label for="upload-avatar-azhan">上传头像：</label>
             <input type="file" id="upload-avatar-azhan" onchange="uploadAvatar('阿湛头像')">
         </div>
         <div class="profile">
             <img src="泉泉头像.jpg" alt="泉泉头像" id="泉泉头像">
             <h2>泉泉的自我介绍</h2>
-            <p>MBTI: INTJ<br>性格关键词: 理性、敏感、企图站在宇宙中心呼唤爱<br>爱好: 看电影和音乐<br>对大家说: 爱你们！</p>
+            <p>MBTI: INTJ<br>性格关键词: 理性、敏感、企图站在宇宙中心呼唤爱<br>爱好:爱好文艺有关的一切，也喜欢看各种血腥猎奇cult片，喜欢一个人 <br>对大家说: 希望在探索我们的过程中你也能感到愉悦幸福。爱你萌！（啾啾</p>
             <label for="upload-avatar-quan">上传头像：</label>
             <input type="file" id="upload-avatar-quan" onchange="uploadAvatar('泉泉头像')">
         </div>
